--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eshop",
   "version": "1.0.0",
   "description": "backend of the eshop",
-  "main": "web.js",
+  "main": "index.js",
   "engines": {
     "node": "16.5.0"
   },
